add simple styles

--- a/index.html
+++ b/index.html
@@ -26,5 +26,19 @@
     <script type="module" src="./js/container.js"></script>
     <title>New project</title>
   </head>
-  <body></body>
+  <body>
+    <div class="step">
+      <h1>The first step</h1>
+      <label for="first-number"
+        >The first number input<input type="number"
+      /></label>
+    </div>
+    <div class="step">
+      <h1>The second step</h1>
+      <label for="second-number"
+        >The second number input<input type="number"
+      /></label>
+    </div>
+    <div class="step"><h1>The third step</h1></div>
+  </body>
 </html>
