--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <title>New project</title>
   </head>
   <body>
-    <div class="step">
+    <div class="step" id="first-step">
       <h1>The first step</h1>
       <p>
         Dear user!<br />
@@ -43,7 +43,7 @@
       <button>next</button>
     </div>
 
-    <div class="step">
+    <div class="step" id="second-step">
       <h1>The second step</h1>
       <p>
         Dear user!<br />
@@ -60,7 +60,7 @@
       <button>next</button>
     </div>
 
-    <div class="step">
+    <div class="step" id="third-step">
       <h1>The third step</h1>
       <button>clear</button>
     </div>
