--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script type="module" src="./js/container.js"></script>
     <title>New project</title>
   </head>
+
   <body>
     <div class="step" id="first-step">
       <h1>The first step</h1>
@@ -35,12 +36,13 @@
       </p>
       <label for="first-number"
         >Place for entering the first number:<input
+          id="first-number"
           type="number"
           min="0"
           max="100000"
           placeholder="..."
       /></label>
-      <button>next</button>
+      <button class="next-to-second">next</button>
     </div>
 
     <div class="step" id="second-step">
@@ -52,17 +54,18 @@
       </p>
       <label for="second-number"
         >Place for entering the second number:<input
+          id="second-number"
           type="number"
           min="0"
           max="100000"
           placeholder="..."
       /></label>
-      <button>next</button>
+      <button class="next-to-third">next</button>
     </div>
 
     <div class="step" id="third-step">
       <h1>The third step</h1>
-      <button>clear</button>
+      <button class="clear">clear</button>
     </div>
   </body>
 </html>
