--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h1>The first step</h1>
       <p>
         Dear user!<br />
-        Please enter the number that will be the start of the range.
+        Please enter the positive number that will be the start of the range.
       </p>
       <label for="first-number"
         >Place for entering the first number:<input
@@ -42,7 +42,7 @@
           max="100000"
           placeholder="..."
       /></label>
-      <button class="next-to-second">next</button>
+      <button id="next-to-second">next</button>
     </div>
 
     <div class="step" id="second-step">
@@ -60,12 +60,12 @@
           max="100000"
           placeholder="..."
       /></label>
-      <button class="next-to-third">next</button>
+      <button id="next-to-third">next</button>
     </div>
 
     <div class="step" id="third-step">
       <h1>The third step</h1>
-      <button class="clear">clear</button>
+      <button id="clear">clear</button>
     </div>
   </body>
 </html>
