add ui functions

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 
     <div class="step" id="third-step">
       <h1>The third step</h1>
+      <p class="result-text"></p>
+      <textarea class="result-arr" id="" cols="30" rows="5"></textarea>
       <button id="clear">clear</button>
     </div>
   </body>
